# opensession

./: AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  db.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: git_info.rs  issues.rs  meta.rs  mod.rs  session_meta.rs  sessions.rs  summary.rs  terminal.rs
src/components/: ConfirmDialog.tsx  ContextMenu.tsx  CopyButton.tsx  DirectoryCard.tsx  EditSummaryModal.tsx  IssueCard.tsx  IssueDetail.tsx  IssueModal.tsx  IssueSection.tsx  NewIssueWithDirModal.tsx  NewTagModal.tsx  SessionCard.tsx  SessionDetail.tsx  SessionPanel.tsx  Sidebar.tsx  TagPopup.tsx  TitleBar.tsx  WorktreeModal.tsx
src/hooks/: useCommands.ts
src/utils/: clipboard.ts
