[package]
name = "opensession"
version = "0.1.0"
description = "OpenCode Session Manager"
authors = ["OpenSession Contributors"]
license = "MIT"
repository = "https://github.com/WangSZ/opensession"
edition = "2021"

[lib]
name = "opensession_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2.7"

[lints.rust]
unexpected_cfgs = "allow"
